slight changes made

--- a/index.html
+++ b/index.html
@@ -27,40 +27,40 @@
                         Keyboard US English </p>
                     <div>
                         <h5>Memory</h5>
-                        <button onclick="updateMemoryCost('8GB')" class="btn btn-outline-secondary">8 GB unified
+                        <button onclick="updateMemoryCost('8GB')" class="btn btn-outline-dark">8 GB unified
                             memory</button>
-                        <button onclick="updateMemoryCost('16GB')" class="btn btn-outline-secondary">16 GB unified
+                        <button onclick="updateMemoryCost('16GB')" class="btn btn-outline-dark">16 GB unified
                             memory</button>
                     </div>
                     <div>
                         <h5>Storage</h5>
-                        <button onclick="updateStorageCost('256GB')" class="btn btn-outline-secondary">256GB SSD
+                        <button onclick="updateStorageCost('256GB')" class="btn btn-outline-dark">256GB SSD
                             storage</button>
-                        <button onclick="updateStorageCost('512GB')" class="btn btn-outline-secondary">512GB SSD
+                        <button onclick="updateStorageCost('512GB')" class="btn btn-outline-dark">512GB SSD
                             storage</button>
-                        <button onclick="updateStorageCost('1TB')" class="btn btn-outline-secondary">1TB SSD
+                        <button onclick="updateStorageCost('1TB')" class="btn btn-outline-dark">1TB SSD
                             storage</button>
                     </div>
                     <div>
                         <h5>Choose your delivery option</h5>
-                        <button onclick="updateDeliveryCost('freePrime')" class="btn btn-outline-secondary">Friday,
+                        <button onclick="updateDeliveryCost('freePrime')" class="btn btn-outline-dark">Friday,
                             Aug 25
                             FREE Prime Delivery</button>
-                        <button onclick="updateDeliveryCost('withDeliveryCost')"
-                            class="btn btn-outline-secondary">Friday, Aug
+                        <button onclick="updateDeliveryCost('withDeliveryCost')" class="btn btn-outline-dark">Friday,
+                            Aug
                             21
                             Delivery charge 20$</button>
                     </div>
                     <div class="w-50 mt-3">
-                        <div class="d-flex justify-content-between">
+                        <div class="d-flex justify-content-between border-bottom border-dark border-1">
                             <h5>Best Price</h5>
                             <h5>$ <span id="best-price">1299</span></h5>
                         </div>
-                        <div class="d-flex justify-content-between">
+                        <div class="d-flex justify-content-between border-bottom border-dark border-1">
                             <h5>Extra memory cost</h5>
                             <h5>$ <span id="memory-cost">0</span></h5>
                         </div>
-                        <div class="d-flex justify-content-between">
+                        <div class="d-flex justify-content-between border-bottom border-dark border-1">
                             <h5>Extra storage cost</h5>
                             <h5>$ <span id="storage-cost">0</span></h5>
                         </div>
