--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <button onclick="updateDeliveryCost('withDeliveryCost')" class="btn btn-outline-dark">Friday,
                             Aug
                             21
-                            Delivery charge 20$</button>
+                            Delivery charge $20</button>
                     </div>
                     <div class="w-50 mt-3">
                         <div class="d-flex justify-content-between border-bottom border-dark border-1">
